// https://developers.google.com/protocol-buffers/docs/tutorials

// [START declaration]
syntax = "proto3";
package netmsg;

option csharp_namespace = "net.msg";

message ReqWay {
    string name = 1;
    string email = 2;
}

message AckWay {
    string uuid = 1;
    string name = 2;
    string email = 3;
}
